--- a/style.css
+++ b/style.css
@@ -822,6 +822,9 @@ hr {
     border-bottom: 1px solid #ccc;
     margin: 10px auto;
 }
+.wp-block-separator:not(.is-style-wide):not(.is-style-dots) {
+    max-width: 100px;
+}
 ul, 
 ol {
 	margin: 0 0 15px 0;
@@ -2168,7 +2171,7 @@ article.post.hentry .entry-content:after,
 }
 article.post.hentry .entry-content:after,
 .clear:after,
-.comment-content:after
+.comment-content:after,
 .site-footer:after {
 	clear: both;
 }
@@ -2490,10 +2493,9 @@ article.post.hentry .alignwide.wp-block-pullquote {
 }
 .wp-block-cover .wp-block-cover__inner-container {
     max-width: 1210px;
-    margin-left: auto;
-    margin-right: auto;
     position: relative;
     padding: 0 20px;
+    width: 100%;
 }
 .wp-block-cover.alignleft {
 	margin: 0 2em 1.5em 0;
@@ -2603,54 +2605,53 @@ article.post.hentry .alignwide.wp-block-pullquote {
 .col-1:not(.woocommerce-column):not(.u-column1) > *:not(:first-child) {
 	margin-top: 40px;
 }
-.wp-block-columns > * {
-	margin-top: 30px;
-	margin-right: 30px;
+.wp-block-columns > *:not(:first-child) {
+	padding-top:30px;
 }
 .wp-block-columns.has-6-columns > * {
-	width: calc((100% - 30.02px * 5) /6);
+	width: calc(100% /6);
 }
 .wp-block-columns.has-5-columns > * {
-	width: calc((100% - 30.02px * 4) /5);
+	width: calc(100% /5);
 }
 .wp-block-columns.has-4-columns > * {
-	width: calc((100% - 30.02px * 3) /4);
+	width: calc(100% /4);
 }
 .wp-block-columns.has-3-columns > * {
-	width: calc((100% - 30.02px * 2) /3);
+	width: calc(100% /3);
 }
 .wp-block-columns.has-2-columns > * {
-	width: calc((100% - 30.02px * 1) /2);
+	width: calc(100% /2);
 }
 .col-1:not(.woocommerce-column):not(.u-column1) > *,
 .has-columns-desktop__1 > * {
 	width: 100%;
 }
-body:not(.rtl) .wp-block-columns > *:last-child {
-	margin-right: 0;
-}
-.wp-block-columns[class*="has-gap"] > *:nth-child(1) {
-	margin-top: 0;
+@media (min-width: 37.5625em) {
+	.wp-block-columns > * {
+		padding-right: 15px;
+		padding-left: 15px;
+	}
+	.wp-block-columns {
+		margin-left: -15px;
+		margin-right: -15px;
+	}
 }
 @media (min-width: 80.0625em) {
 	.col-5:not(.woocommerce-column):not(.u-column5) > * {
 		width: calc((100% - 20.02px * 4) /5);
 	}
-	.col-5:not(.woocommerce-column):not(.u-column5) > *:nth-child(-n+5),
+	.col-5:not(.woocommerce-column):not(.u-column5) > *:nth-child(-n+5) {
+		margin-top: 0;
+	}
 	.wp-block-columns.has-2-columns > *:nth-child(-n+2),
 	.wp-block-columns.has-3-columns > *:nth-child(-n+3),
 	.wp-block-columns.has-4-columns > *:nth-child(-n+4),
 	.wp-block-columns.has-5-columns > *:nth-child(-n+5),
 	.wp-block-columns.has-6-columns > *:nth-child(-n+6) {
-		margin-top: 0;
+		padding-top: 0;
 	}
-	body:not(.rtl) .col-5:not(.woocommerce-column):not(.u-column5) > *:nth-child(5n),
-	body:not(.rtl) .wp-block-columns.has-6-columns > *:nth-child(6n),
-	body:not(.rtl) .wp-block-columns.has-5-columns > *:nth-child(5n),
-	body:not(.rtl) .wp-block-columns.has-4-columns > *:nth-child(4n),
-	body:not(.rtl) .wp-block-columns.has-3-columns > *:nth-child(3n),
-	body:not(.rtl) .wp-block-columns.has-2-columns > *:nth-child(2n),
-	.wp-block-columns.has-1-columns > *:nth-child(1n) {
+	body:not(.rtl) .col-5:not(.woocommerce-column):not(.u-column5) > *:nth-child(5n) {
 		margin-right: 0;
 	}
 }
@@ -2675,6 +2676,9 @@ body:not(.rtl) .wp-block-columns > *:last-child {
 	.wp-block-column:nth-child(2n) {
 	    margin-left: 0;
 	}
+	.wp-block-columns > .wp-block-column {
+	    margin-right: 0;
+	}
 }
 @media (min-width: 37.5625em) {
 	.col-2:not(.woocommerce-column):not(.u-column2) > * {
@@ -2693,29 +2697,25 @@ body:not(.rtl) .wp-block-columns > *:last-child {
 	}
 	.wp-block-columns.has-6-columns > *,
 	.wp-block-columns.has-5-columns > * {
-		width: calc((100% - 30.02px * 2) /3);
+		width: calc(100% /3);
 	}
-	.col-5:not(.woocommerce-column):not(.u-column5) > *:nth-child(-n+3),
+	.col-5:not(.woocommerce-column):not(.u-column5) > *:nth-child(-n+3) {
+		margin-top: 0;
+	}
 	.wp-block-columns.has-2-columns > *:nth-child(-n+2),
 	.wp-block-columns.has-6-columns > *:nth-child(-n+3),
 	.wp-block-columns.has-5-columns > *:nth-child(-n+3),
 	.wp-block-columns.has-3-columns > *:nth-child(-n+3),
 	.wp-block-columns.has-4-columns > *:nth-child(-n+4) {
-		margin-top: 0;
+		padding-top: 0;
 	}
-	body:not(.rtl) .col-5:not(.woocommerce-column):not(.u-column5) > *:nth-child(3n),
-	body:not(.rtl) .wp-block-columns.has-6-columns > *:nth-child(3n),
-	body:not(.rtl) .wp-block-columns.has-5-columns > *:nth-child(3n),
-	body:not(.rtl) .wp-block-columns.has-4-columns > *:nth-child(4n),
-	body:not(.rtl) .wp-block-columns.has-3-columns > *:nth-child(3n),
-	body:not(.rtl) .wp-block-columns.has-2-columns > *:nth-child(2n),
-	.wp-block-columns.has-1-columns > *:nth-child(1n) {
+	body:not(.rtl) .col-5:not(.woocommerce-column):not(.u-column5) > *:nth-child(3n) {
 		margin-right: 0;
 	}
 }
 @media (max-width: 60em) and (min-width: 37.5625em) { 
 	.wp-block-columns:not(.has-1-columns):not(.has-2-columns) > * {
-		width: calc((100% - 30.02px) /2);
+		width: calc(100% /2);
 	}
 	.col-3:not(.woocommerce-column):not(.u-column3) > *,
 	.col-5:not(.woocommerce-column):not(.u-column5) > *,
@@ -2729,17 +2729,16 @@ body:not(.rtl) .wp-block-columns > *:last-child {
 	}
 	.col-3:not(.woocommerce-column):not(.u-column3) > *:nth-child(-n+2),
 	.col-5:not(.woocommerce-column):not(.u-column5) > *:nth-child(-n+2),
-	.col-4:not(.woocommerce-column):not(.u-column4) > *:nth-child(-n+2),
-	.wp-block-columns:not(.has-1-columns):not(.has-2-columns) > *:nth-child(2) {
+	.col-4:not(.woocommerce-column):not(.u-column4) > *:nth-child(-n+2) {
 		margin-top: 0;
+	}
+	.wp-block-columns:not(.has-1-columns):not(.has-2-columns) > *:nth-child(2) {
+		padding-top: 0;
 	}
 	.footer-widgets.col-3 > *:last-child,
 	body:not(.rtl) .col-3:not(.woocommerce-column):not(.u-column3) > *:nth-child(2n),
 	body:not(.rtl) .col-5:not(.woocommerce-column):not(.u-column5) > *:nth-child(2n),
-	body:not(.rtl) .col-4:not(.woocommerce-column):not(.u-column4) > *:nth-child(2n),
-	.wp-block-columns.has-1-columns > *:nth-child(1n),
-	.wp-block-columns.has-2-columns > *:nth-child(1n),
-	body:not(.rtl) .wp-block-columns:not(.has-1-columns):not(.has-2-columns) > *:nth-child(2n) {
+	body:not(.rtl) .col-4:not(.woocommerce-column):not(.u-column4) > *:nth-child(2n) {
 		margin-right: 0;
 	}
 }
@@ -2760,8 +2759,7 @@ body:not(.rtl) .wp-block-columns > *:last-child {
 	.col-2:not(.woocommerce-column):not(.u-column2) > *,
 	.col-3:not(.woocommerce-column):not(.u-column3) > *,
 	.col-5:not(.woocommerce-column):not(.u-column5) > *,
-	.col-4:not(.woocommerce-column):not(.u-column4) > *,
-	.wp-block-columns > * {
+	.col-4:not(.woocommerce-column):not(.u-column4) > * {
 		margin-right: 0;
 	}
 }
