--- a/woocommerce.css
+++ b/woocommerce.css
@@ -2142,6 +2142,9 @@ ul.woocommerce-error {
     width: 100%;
 	bottom: 0;
 }
+.page-template-template-fluid.home .site-content > .conj-lite-col__full > .woocommerce:first-child {
+	margin-top: 0;
+}
 @media (min-width: 37.5625em) {
 	.woocommerce-info .showlogin,
 	.woocommerce-info .showcoupon,
@@ -2168,7 +2171,7 @@ ul.woocommerce-error {
 	.woocommerce-store-notice:not([style*="display: none;"]) {
 		display: flex !important;
 	}
-	body:not(.home) .site-content > .conj-lite-col__full > .woocommerce:first-child,
+	.site-content > .conj-lite-col__full > .woocommerce:first-child,
 	.post-type-archive-product.search-no-results .woocommerce-breadcrumb + .woocommerce,
 	.post-type-archive-product.search-results .woocommerce-breadcrumb + .woocommerce,
 	body:not(.search-no-results):not(.search-results) .woocommerce-breadcrumb + .woocommerce {
@@ -2204,7 +2207,7 @@ ul.woocommerce-error {
 	.woocommerce-info .button {
 		order: 5;
 	}
-	body:not(.home) .site-content > .conj-lite-col__full > .woocommerce:first-child,
+	.site-content > .conj-lite-col__full > .woocommerce:first-child,
 	body:not(.search-no-results) .woocommerce-breadcrumb + .woocommerce {
 		margin-top: 2.55em;
 	}
