--- a/assets/admin/css/style-editor.css
+++ b/assets/admin/css/style-editor.css
@@ -1343,36 +1343,39 @@ body #editor .editor-block-list__block[data-type="core/column"] {
 .edit-post-visual-editor .wp-block-columns .editor-block-list__block {
 	margin: 0;
 }
-.wp-block-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"] {
-	margin-top:30px;
-	margin-right:30px;
+.wp-block-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:not(:first-child) {
+	padding-top:30px;
 }
 .wp-block-columns.has-6-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"] {
-	width: calc((100% - 30.02px * 5) /6);
+	width: calc(100% /6);
 }
 .wp-block-columns.has-5-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"] {
-	width: calc((100% - 30.02px * 4) /5);
+	width: calc(100% /5);
 }
 .wp-block-columns.has-4-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"] {
-	width: calc((100% - 30.02px * 3) /4);
+	width: calc(100% /4);
 }
 .wp-block-columns.has-3-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"] {
-	width: calc((100% - 30.02px * 2) /3);
+	width: calc(100% /3);
 }
 .wp-block-columns.has-2-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"] {
-	width: calc((100% - 30.02px * 1) /2);
+	width: calc(100% /2);
 }
 .wp-block-columns.has-2-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"] {
-	width: calc((100% - 35.02px * 1) /2);
+	width: calc(100% /2);
 }
 .wp-block-columns.has-1-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"] {
 	width: 100%;
 }
-body:not(.rtl) .wp-block-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:last-child {
-	margin-right: 0;
-}
-.wp-block-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(1) {
-	margin-top: 0;
+@media (min-width: 37.5625em) {
+	.wp-block-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"] {
+		padding-right: 15px;
+		padding-left: 15px;
+	}
+	.wp-block-columns > .editor-inner-blocks > .editor-block-list__layout {
+		margin-left: -15px;
+		margin-right: -15px;
+	}
 }
 @media (min-width: 80.0625em) {
 	.wp-block-columns.has-2-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(-n+2),
@@ -1380,15 +1383,7 @@ body:not(.rtl) .wp-block-columns > .editor-inner-blocks > .editor-block-list__la
 	.wp-block-columns.has-4-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(-n+4),
 	.wp-block-columns.has-5-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(-n+5),
 	.wp-block-columns.has-6-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(-n+6) {
-		margin-top: 0;
-	}
-	body:not(.rtl) .wp-block-columns.has-6-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(6n),
-	body:not(.rtl) .wp-block-columns.has-5-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(5n),
-	body:not(.rtl) .wp-block-columns.has-4-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(4n),
-	body:not(.rtl) .wp-block-columns.has-3-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(3n),
-	body:not(.rtl) .wp-block-columns.has-2-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(2n),
-	.wp-block-columns.has-1-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(1n) {
-		margin-right: 0;
+		padding-top: 0;
 	}
 }
 @media (min-width: 60.0625em) {
@@ -1397,14 +1392,7 @@ body:not(.rtl) .wp-block-columns > .editor-inner-blocks > .editor-block-list__la
 	.wp-block-columns.has-4-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(-n+4),
 	.wp-block-columns.has-5-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(-n+5),
 	.wp-block-columns.has-6-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(-n+6) {
-		margin-top: 0;
-	}
-	body:not(.rtl) .wp-block-columns.has-6-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(6n),
-	body:not(.rtl) .wp-block-columns.has-5-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(5n),
-	body:not(.rtl) .wp-block-columns.has-4-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(4n),
-	body:not(.rtl) .wp-block-columns.has-3-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(3n),
-	body:not(.rtl) .wp-block-columns.has-2-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(2n) {
-		margin-right: 0;
+		padding-top: 0;
 	}
 }
 @media (min-width: 37.5em) {
@@ -1416,6 +1404,7 @@ body:not(.rtl) .wp-block-columns > .editor-inner-blocks > .editor-block-list__la
 	.wp-block-columns>.editor-inner-blocks>.editor-block-list__layout>[data-type="core/column"]:nth-child(2n),
 	.wp-block-columns>.editor-inner-blocks>.editor-block-list__layout>[data-type="core/column"] {
 		margin-left: 0;
+		margin-right: 0;
 	}
 }
 @media (min-width: 37.5625em) {
@@ -1424,51 +1413,31 @@ body:not(.rtl) .wp-block-columns > .editor-inner-blocks > .editor-block-list__la
 	.wp-block-columns.has-4-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(-n+4),
 	.wp-block-columns.has-5-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(-n+5),
 	.wp-block-columns.has-6-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(-n+6) {
-		margin-top: 0;
-	}
-	body:not(.rtl) .wp-block-columns.has-6-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(6n),
-	body:not(.rtl) .wp-block-columns.has-5-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(5n),
-	body:not(.rtl) .wp-block-columns.has-4-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(4n),
-	body:not(.rtl) .wp-block-columns.has-3-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(3n),
-	body:not(.rtl) .wp-block-columns.has-2-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(2n) {
-		margin-right: 0;
+		padding-top: 0;
 	}
 }
 @media (max-width: 80em) and (min-width: 60.0625em) {
 	.wp-block-columns.has-6-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"],
 	.wp-block-columns.has-5-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"] {
-		width: calc((100% - 30.02px * 2) /3);
+		width: calc(100% /3);
 	}
 	.wp-block-columns.has-6-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(-n+3),
 	.wp-block-columns.has-5-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(-n+3),
 	.wp-block-columns.has-3-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(-n+3),
 	.wp-block-columns.has-4-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(-n+4) {
-		margin-top: 0;
-	}
-	body:not(.rtl) .wp-block-columns.has-6-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(3n),
-	body:not(.rtl) .wp-block-columns.has-5-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(3n),
-	body:not(.rtl) .wp-block-columns.has-4-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(4n),
-	body:not(.rtl) .wp-block-columns.has-3-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(3n),
-	body:not(.rtl) .wp-block-columns.has-2-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(2n),
-	.wp-block-columns.has-1-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(1n) {
-		margin-right: 0;
+		padding-top: 0;
 	}
 }
 @media (max-width: 60em) and (min-width: 37.5625em) { 
 	.wp-block-columns:not(.has-1-columns):not(.has-2-columns) > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"] {
-		width: calc((100% - 30.02px) /2);
+		width: calc(100% /2);
 	}
 	.wp-block-columns.has-1-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"],
 	.wp-block-columns.has-2-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"] {
 		width: 100%;
 	}
 	.wp-block-columns:not(.has-1-columns):not(.has-2-columns) > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(2) {
-		margin-top: 0;
-	}
-	.wp-block-columns.has-1-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(1n),
-	.wp-block-columns.has-2-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(1n),
-	body:not(.rtl) .wp-block-columns:not(.has-1-columns):not(.has-2-columns) > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"]:nth-child(2n) {
-		margin-right: 0;
+		padding-top: 0;
 	}
 }
 @media (max-width: 37.5em) { 
@@ -1477,9 +1446,6 @@ body:not(.rtl) .wp-block-columns > .editor-inner-blocks > .editor-block-list__la
 	}
 	.wp-block-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"] {
 		width: 100%;
-	}
-	.wp-block-columns > .editor-inner-blocks > .editor-block-list__layout > [data-type="core/column"] {
-		margin-right: 0;
 	}
 	.wp-block-columns>.editor-inner-blocks>.editor-block-list__layout>[data-type="core/column"] {
 		margin-bottom: 0;
@@ -1505,10 +1471,9 @@ body:not(.rtl) .wp-block-columns > .editor-inner-blocks > .editor-block-list__la
 --------------------------------------------------------------*/
 .wp-block-cover .wp-block-cover__inner-container {
     max-width: 1210px;
-    margin-left: auto;
-    margin-right: auto;
     position: relative;
     padding: 0 20px;
+    width: 100%;
 }
 .wp-block-cover-image .wp-block-cover-image-text, 
 .wp-block-cover-image .wp-block-cover-text, 
@@ -1962,6 +1927,7 @@ pre,
 .required {
 	color: #FF4961;
 }
+.wp-block-cover__inner-container .wp-block-paragraph:not(.has-text-color),
 .wp-block-cover__inner-container .editor-block-list__layout h1, 
 .wp-block-cover__inner-container .editor-block-list__layout h2, 
 .wp-block-cover__inner-container .editor-block-list__layout h3, 
