Tweak file tree

--- a/assets/admin/css/style-editor.css
+++ b/assets/admin/css/style-editor.css
@@ -26,6 +26,22 @@
 	## Captions
 	## Gallery
 	## Audio
+# Columns
+# Alignments
+# Cover block
+# Media and text
+# Post Title
+# Block editor
+	## Toggle control
+	## Tootlbar
+	## Classic editor
+	## Breadcrumb
+	## Spacer
+	## Button component
+	## Media placeholder
+# Edit post sidebar
+	## Datepicker
+# Colors
 --------------------------------------------------------------*/
 /*--------------------------------------------------------------
 # Typography
