Tweak file tree

--- a/assets/admin/css/style-editor-woocommerce.css
+++ b/assets/admin/css/style-editor-woocommerce.css
@@ -12,6 +12,8 @@
 # Products
 	## Columns
 # Star rating
+# Featured product
+# Colors
 --------------------------------------------------------------*/
 /*--------------------------------------------------------------
 # Typography
