Update header meta

--- a/assets/admin/css/style-editor-rtl.css
+++ b/assets/admin/css/style-editor-rtl.css
@@ -1,5 +1,5 @@
 /**
- * Used to style the Gutenberg editor.
+ * Used to style the Gutenberg editor for Right To Left (RTL) direction languages.
  *
  * @package     conj-lite
  * @author      MyPreview (Github: @mypreview, @gookalani)
